show progress dialog during minimal-net compilation